repair alignment for round 5

--- a/src/app/views/main/main.component.scss
+++ b/src/app/views/main/main.component.scss
@@ -983,7 +983,7 @@ button {
 // round five
 .video_body{
     margin-left: 50px;
-    height: 503px;
+    height: 604px;
     margin-top: -7%;
 }
 .videoName{
